<resources>
    <string name="app_name">Pitzz</string>
    <string name="movies">Movies</string>
    <string name="televisions">Televisions</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="unknown">Unknown</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="genres">Genres</string>
    <string name="date">Date</string>
    <string name="now_playing">Now Playing</string>
    <string name="runtime">Runtime</string>
    <string name="votes">%s Votes</string>
    <string name="vote_average">9.0</string>
    <string name="overview">Overview</string>
    <string name="productions">Productions</string>
    <string name="oops">Oops!</string>
    <string name="no_favorites_message">Your favorite movies is still empty, to add a movie as favorite click the favorite button on the detail page!</string>
    <string name="no_movie_message">No movies were found on the server!</string>
    <string name="looking_a_movie">Looking a movie?</string>
    <string name="looking_a_tv_shows">Looking a tv shows?</string>
    <string name="remove_from_favorites">Remove from favorites!</string>
    <string name="added_to_favorites">Added to favorites!</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="release_reminder_message">Reminder showing the movie that released today.</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_message">Reminder for return to app.</string>
    <string name="daily_reminder_notification_message">HI Good Morning, it\'s time to see the latest film.</string>
</resources>
