<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_primary"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_slide"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/HeadingPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_secondary"
        android:layout_marginStart="@dimen/margin_secondary"
        android:text="@string/choose_language" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_english_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_secondary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_flag_english"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/BodyPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_secondary"
                android:text="@string/english"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryText" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_indonesia_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_secondary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_flag_indonesia"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/BodyPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_secondary"
                android:text="@string/indonesia"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryText" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>